# photoTidy

./: README.md  eslint.config.js  migrate.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
config/: config.json
docs/: migrate.md  optimize.md  plan.md  setup.md  structure.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  db.rs  error.rs  events.rs  execute.rs  lib.rs  logging.rs  main.rs  plan.rs  scan.rs  system.rs
src-tauri/src/utils/: fs.rs  hash.rs  json.rs  mod.rs  path.rs  time.rs
src/services/: config.test.ts  config.ts  plan.ts  scan.ts  system.ts
src/state/: configStore.test.ts  configStore.ts  workflowStore.ts
src/types/: config.ts  plan.ts  scan.ts  system.ts
