[package]
name = "phototidy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "phototidy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
walkdir = "2"
md5 = "0.7"
blake3 = "1"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
serde_with = { version = "3", features = ["macros"] }
parking_lot = "0.12"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"


